[package]
name = "amp_flashprog"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"
stm32f103xx = "0.10.0"
usb-device = { git = "https://github.com/mvirkkunen/usb-device", rev = "6b606d394bdebf33de8866a4a21c3aa41e32c010" }
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", rev = "d1bfbbf9148fc3b9d095fdb3f299aca4070531d8" }
stm32f103xx-usb = { git = "https://github.com/mvirkkunen/stm32f103xx-usb", rev = "08e1a83f15d4a77c28ebf22cc21437af67437d24" }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
